@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "20130731.000066"
+#define TAGSISTANT_BUILDNUMBER "20130802.000029"
