@@ -30,7 +30,10 @@ GRegex *rx = NULL;
 /* exported init function */
 int tagsistant_plugin_init()
 {
-	rx = g_regex_new("^(size|orientation)$", TAGSISTANT_RX_COMPILE_FLAGS, 0, NULL);
+	gchar *pattern = tagsistant_get_ini_entry("mime:image/jpeg", "filter");
+	if (!pattern) pattern = "^(size|orientation)$";
+
+	rx = g_regex_new(pattern, TAGSISTANT_RX_COMPILE_FLAGS, 0, NULL);
 
 	return(1);
 }
