@@ -261,7 +261,9 @@ extern int tagsistant_inner_create_and_tag_object(tagsistant_querytree *qtree, i
 	tagsistant_query("update objects set checksum = \"\" where inode = %d", dbi_conn, NULL, NULL, inode)
 
 // read and write repository.ini file
+extern GKeyFile *tagsistant_ini;
 extern void tagsistant_manage_repository_ini();
+#define tagsistant_get_ini_entry(section, key) g_key_file_get_value(tagsistant_ini, section, key, NULL)
 
 #include "fuse_operations/operations.h"
 
